# scai-solana-bridge

evm-contracts/: README.md  hardhat.config.js  package-lock.json  package.json
evm-contracts/artifacts/@openzeppelin/contracts/utils/StorageSlot.sol/: StorageSlot.dbg.json
evm-contracts/artifacts/contracts/BridgeManager.sol/: BridgeManager.dbg.json  BridgeManager.json
evm-contracts/artifacts/contracts/MessageVerifier.sol/: IValidatorRegistry.json  MessageVerifier.dbg.json  MessageVerifier.json
evm-contracts/artifacts/contracts/SCAITokenLocker.sol/: SCAITokenLocker.dbg.json  SCAITokenLocker.json
evm-contracts/artifacts/contracts/ValidatorRegistry.sol/: ValidatorRegistry.json
evm-contracts/cache/: solidity-files-cache.json  validations.json
evm-contracts/contracts/: BridgeManager.sol  MessageVerifier.sol  SCAITokenLocker.sol  ValidatorRegistry.sol
evm-contracts/interfaces/: IValidatorRegistry.sol
evm-contracts/scripts/: deploy.js  upgrade.js
evm-contracts/test/: bridge.test.js
relayer/src/: Dockerfile  index.js  submitter.js  utils.js  watcher.js
solana-programs/: Anchor.toml  Cargo.toml  package-lock.json  package.json
solana-programs/programs/bridge_program/: Cargo.toml
solana-programs/programs/bridge_program/src/: errors.rs  lib.rs  state.rs
solana-programs/programs/bridge_program/src/instructions/: confirm_unlock.rs  execute_mint.rs  initialize.rs  initiate_burn.rs  mod.rs  update_validators.rs
solana-programs/programs/bridge_program/src/utils/: crypto.rs
solana-programs/tests/: bridge.test.js
(+4 files in other folders)
